--- a/3B-29.tex
+++ b/3B-29.tex
@@ -609,8 +609,10 @@ Añadir \href{https://scholar.google.es/scholar?hl=es&as_sdt=0\%2C5&q=The+O-Ring
 			\3 Formulación
 				\4 Simplificación con dos ecuaciones
 				\4 Output:
+				\4[] $\alpha$ y $\beta$ parámetros
 				\4[] $\to$ \fbox{$\dot{y} = \alpha + \beta \dot{x}$}
 				\4 Productividad:
+				\4[] $\gamma$ y $\delta$ 
 				\4[] $\to$ \fbox{$\dot{x} = \gamma + \delta \dot{y}$}
 				\4 Crecimiento del output:
 				\4[] $\to$ \fbox{$\dot{y} = \alpha + \beta \gamma + \beta \delta \dot{y}$}
