--- a/3A-42.tex.tex
+++ b/3A-42.tex.tex
@@ -1146,6 +1146,9 @@ Supongamos $Y=F(K,L) = K^\alpha \cdot L^{1-\alpha}$. Tenemos que $F_K=\alpha \cd
 	\item Crecimiento de la población: $L(t) = e^{nt} L(0)$
 \end{itemize}
 
+
+TERMINAR DE COPIAR PREGUNTA
+
 \begin{itemize}
 	\item[a] $\log \left( y(t) \right) = \frac{\alpha}{1-\alpha-\beta} \log \left( \frac{s_k}{n+g+\delta_k} \right) + \frac{\beta}{1-\alpha - \beta} \log \left(  \frac{s_h}{n+g+\delta_h} \right) + u$
 	\item[b] $\log \left( y(t) \right) = \alpha \log \left( \frac{s_k}{n+g+\delta_k} \right) + \beta \log \left(  \frac{s_h}{n+g+\delta_h} \right) + u$
